# Bachelor

./: CMakeLists.txt  Makefile  README.md  generate.cpp
.github/workflows/: Bachelor.yml
src/: config.h  main.cpp  peer.cpp  router.cpp
src/Chrono/: Checkpoint.cpp  Checkpoint.h  Timeout.cpp  Timeout.h  util.cpp  util.h
src/Misc/: args.cpp  args.h
src/Packet/: Action.cpp  Action.h  ActionPacket.cpp  ActionPacket.h  ConnectPacket.cpp  ConnectPacket.h  Packet.cpp  Packet.h  Payload.cpp  Payload.h  PingPacket.cpp  PingPacket.h  VotePacket.cpp  VotePacket.h  helper.cpp  helper.h  port.cpp  port.h  uuid.cpp  uuid.h
src/Server/: Server.cpp  Server.h
src/Socket/: NaivePeer.cpp  NaivePeer.h  Peer.cpp  Peer.h  Router.cpp  Router.h  Socket.cpp  Socket.h  VotingPeer.cpp  VotingPeer.h  log.h
src/State/: Action.cpp  Action.h  Ballot.cpp  Ballot.h  IntState.cpp  IntState.h  PosState.cpp  PosState.h  State.cpp  State.h
test/src/: NaivePeer.cpp  Peer.cpp  Socket.cpp  VotingPeer.cpp
